--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "start": "vite --open --mode dev",
-    "test": "vitest --mode dev",
+    "test-unit": "vitest --mode dev",
     "update": "pnpm update || yarn upgrade || npm update",
     "lint": "eslint .",
     "lint & fix": "eslint . --fix",
@@ -17,11 +17,11 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -36,9 +36,9 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
-    "sass": "^1.77.1",
+    "sass": "^1.77.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0",
+    "typescript-eslint": "^7.9.0",
     "vite": "^5.2.11",
     "vitest": "^1.6.0",
     "zustand": "^4.5.2"
